// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`breakpoint > renders correctly down prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="css-1118jpq-Breakpoint e1ehbeci0"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`breakpoint > renders correctly up prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="css-1f5mmcq-Breakpoint e1ehbeci0"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;
